[tool.poetry]
name = "dotprompt-cli"
version = "0.0.3"
description = "Generate files from AI prompts"
authors = ["Dmitry Degtyarev <ddegtyarev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
langchain-aws = "^0.1.8"
langchain-anthropic = "^0.1.17"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dotprompt = "dotprompt_cli.gen:main"
